Added vue spa